<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/configure_survey_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8F9DC4"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ConfigureSurveyFragment">

    <Button
        android:id="@+id/save_edits_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFFFFF"
        android:padding="3dp"
        android:text="@string/save_edits"
        android:textColor="#16257E"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_one"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/configure_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="98dp"
        android:text="@string/configure_screen_title"
        android:textColor="#0E1A5E"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/survey_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/survey_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/survey_question_hint"
        android:inputType="textPersonName"
        android:textColor="#111D61"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configure_screen_title" />

    <EditText
        android:id="@+id/answer_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/answer_one_hint"
        android:inputType="textPersonName"
        android:textColor="#101C5F"
        app:layout_constraintBottom_toTopOf="@+id/answer_two"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/answer_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/answer_two_hint"
        android:inputType="textPersonName"
        android:textColor="#142169"
        app:layout_constraintBottom_toTopOf="@+id/save_edits_button"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>