<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_survey_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCA3DF"
    tools:context=".SurveyQuestionFragment">

    <Button
        android:id="@+id/edit_survey_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:text="@string/edit_survey_button"
        android:textAllCaps="false"
        android:textColor="#2D095F"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/survey_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/are_you_excited"
        android:textAlignment="center"
        android:textColor="#3D0985"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/no_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:padding="3dp"
        android:text="@string/nope"
        android:textAllCaps="false"
        android:textColor="#39087C"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_survey_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="#FFFFFF"
        android:padding="3dp"
        android:text="@string/heck_yeah"
        android:textAllCaps="false"
        android:textColor="#3E0B86"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/no_button"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>