<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAC979"
    tools:context=".ResultsFragment">

    <TextView
        android:id="@+id/yes_vote_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="2dp"
        android:text="0"
        android:textColor="#50460F"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/no_vote_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yes_votes_title" />

    <TextView
        android:id="@+id/no_vote_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:text="0"
        android:textColor="#4B4211"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/yes_vote_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yes_vote_count"
        app:layout_constraintTop_toTopOf="@+id/yes_vote_count"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/results_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#4D4415"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_survey_button" />

    <TextView
        android:id="@+id/yes_votes_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="66dp"
        android:text="@string/yes_votes_title"
        android:textColor="#4B4215"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/no_votes_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results_title" />

    <TextView
        android:id="@+id/no_votes_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="35dp"
        android:text="@string/no_votes_title"
        android:textColor="#4B4215"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/no_vote_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yes_votes_title" />

    <Button
        android:id="@+id/reset_survey_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="#FFFFFF"
        android:text="@string/reset_survey"
        android:textAllCaps="false"
        android:textColor="#3C3411"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/results_title"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>